--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
 
 
 .first-sec-img {
-    background-image: url("/images/Circle\ design.svg");
+    background-image: url("images/Circle\ design.svg");
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
